# Markets-sentiment-analysis

./: .gitignore  README.md  pyproject.toml
src/: 01_Fear_and_Greed.ipynb  02_Google_Trend.ipynb  03_Twitter_sentiment_NLP.ipynb  04_Paper_news_NLP.ipynb  05_finnhub_api_sentiment.ipynb
src/modules/: data_fetcher.py  twitter_tools.py
