[tool.poetry]
name = "markets-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tweepy = "^4.12.1"
afinn = "^0.1"
pytrends = "4.7.1"
requests = "^2.28.2"
yfinance = "^0.2.12"
pandas = "^1.5.3"
python-dotenv = "^1.0.0"
kucoin-python = "^1.0.11"
plotly = "^5.13.1"
nbformat = "^5.7.3"
textblob = "^0.17.1"
finnhub-python = "^2.4.16"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
